name:                loom
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/loom#readme
license:             BSD3
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable frac-tiles
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , diagrams
                     , diagrams-svg
                     , diagrams-lib
                     , palette >= 0.3.0.1
                     , random
                     , MonadRandom
                     , QuickCheck
                     , mtl
                     , filepath
